# rust-sdk

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
crates/rmcp/: CHANGELOG.md
crates/rmcp-macros/: CHANGELOG.md
examples/clients/: Cargo.toml
examples/clients/src/: test_react_advanced.rs  test_react_component_server.rs  test_react_errors.rs
examples/rig-integration/: CHANGELOG.md
examples/servers/: Cargo.toml  README_REACT_COMPONENTS.md
examples/simple-chat-client/: CHANGELOG.md
examples/wasi/: CHANGELOG.md  Cargo.toml
react-component-server/: .dockerignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README-Docker.md  README.md  build-docker.sh  docker-compose.yml  mcp.json  package.json  test-server.sh
react-component-server/components/accordion/: component.tsx  manifest.json  types.ts
react-component-server/components/avatar/: manifest.json
react-component-server/components/badge/: manifest.json
react-component-server/components/breadcrumb/: manifest.json
react-component-server/components/button/: README.md  component.tsx  manifest.json  types.ts
react-component-server/components/button/examples/: basic.tsx  sizes.tsx  variants.tsx
react-component-server/components/card/: README.md  component.tsx  manifest.json  types.ts
react-component-server/components/card/examples/: basic.tsx
react-component-server/components/carousel/: manifest.json
react-component-server/components/checkbox/: manifest.json
react-component-server/components/combobox/: manifest.json
react-component-server/components/dialog/: manifest.json
react-component-server/components/divider/: manifest.json
react-component-server/components/drawer/: manifest.json
react-component-server/components/field/: manifest.json
react-component-server/components/image/: manifest.json
react-component-server/components/input/: README.md  component.tsx  manifest.json  types.ts
react-component-server/components/input/examples/: basic.tsx  variants.tsx
react-component-server/components/label/: manifest.json
react-component-server/components/link/: manifest.json
react-component-server/components/menu/: manifest.json
react-component-server/components/popover/: manifest.json
react-component-server/components/progress/: manifest.json
react-component-server/components/radio/: manifest.json
react-component-server/components/spinner/: manifest.json
react-component-server/components/switch/: manifest.json
react-component-server/components/tabs/: manifest.json
react-component-server/components/text/: manifest.json
react-component-server/components/textarea/: manifest.json
react-component-server/src/: main.rs
react-component-server/src/client/: test_react_advanced.rs  test_react_component_server.rs  test_react_errors.rs
react-component-server/src/server/: file_loader.rs  library.rs  mod.rs  server.rs  types.rs
(+5 files in other folders)
